--- a/javascript/effect/searchEffect02.html
+++ b/javascript/effect/searchEffect02.html
@@ -42,11 +42,11 @@
             <div class="search__list">
                 <div class="css">
                     <ul>
-                        <li data-name="accent-color" data-type="플렉스"><strong>accent-color</strong> : href특성을 통해 다른 페이지나 같은페이지의 위치, 파일와 그 외 다른 URL로 연결할 수 있는 하이퍼 링크를 만듭니다.</li>
-                        <li data-name="align-content" data-type="플렉스"><strong>align-content</strong> :  콘텐츠 아이템의 상하관계 정렬 상태를 설정</li>
-                        <li data-name="align-items" data-type="플렉스"><strong>align-items</strong> : 콘텐츠 아이템의 내부 상하관계 정렬 상태를 설정</li>
-                        <li data-name="align-self" data-type="플렉스"><strong>align-self</strong> : 개별적인 콘텐츠 아이템의 정렬 상태를 설정</li>
-                        <li data-name="all" data-type="기타"><strong>all</strong> : 요소의 속성을 초기화 또는 상속을 설정</li>
+                        <li data-type="플렉스"><strong>accent-color</strong> : href특성을 통해 다른 페이지나 같은페이지의 위치, 파일와 그 외 다른 URL로 연결할 수 있는 하이퍼 링크를 만듭니다.</li>
+                        <li data-type="플렉스"><strong>align-content</strong> :  콘텐츠 아이템의 상하관계 정렬 상태를 설정</li>
+                        <li data-type="플렉스"><strong>align-items</strong> : 콘텐츠 아이템의 내부 상하관계 정렬 상태를 설정</li>
+                        <li data-type="플렉스"><strong>align-self</strong> : 개별적인 콘텐츠 아이템의 정렬 상태를 설정</li>
+                        <li data-type="기타"><strong>all</strong> : 요소의 속성을 초기화 또는 상속을 설정</li>
                         <li data-name="animation" data-type="애니메이션"><strong>animation</strong> : 애니메이션과 관련된 속성을 일괄적으로 설정</li>
                         <li data-name="animation-delay" data-type="애니메이션"><strong>animation-delay</strong> : 애니메이션 지연 시간을 설정</li>
                         <li data-name="animation-direction" data-type="애니메이션"><strong>animation-direction</strong> : 애니메이션 움직임 방향을 설정</li>
@@ -409,22 +409,22 @@
                         <li data-name="transform-style"><strong>transform-style</strong> : 요소에 회전, 크기 조절, 기울이기, 이동 효과를 부여 후 스타일 설정</li>
                         <li data-name="transition"><strong>transition</strong> : </li>
                         <li data-name="transition-delay"><strong>transition-delay</strong> : </li>
-                        <li data-name="transition-duration"><strong>transition-duration</strong> : </li>
-                        <li data-name="transition-property"><strong>transition-property</strong> : </li>
-                        <li data-name="transition-timing-function"><strong>transition-timing-function</strong> : </li>
-                        <li data-name="translate"><strong>translate</strong> : </li>
-                        <li data-name="unicode-bidi"><strong>unicode-bidi</strong> : </li>
-                        <li data-name="user-select"><strong>user-select</strong> : </li>
-                        <li data-name="vertical-align"><strong>vertical-align</strong> : </li>
-                        <li data-name="visibility"><strong>visibility</strong> : </li>
-                        <li data-name="white-space"><strong>white-space</strong> : </li>
-                        <li data-name="widows"><strong>widows</strong> : </li>
-                        <li data-name="width"><strong></strong> : 요소의 너비를 설정</li>
-                        <li data-name="will-change"><strong>will-change</strong> : </li>
-                        <li data-name="word-break"><strong>word-break</strong> : </li>
-                        <li data-name="word-spacing"><strong>word-spacing</strong> : </li>
-                        <li data-name="writing-mode"><strong>writing-mode</strong> : </li>
-                        <li data-name="z-index"><strong>z-index</strong> : 위치 지정 요소와, 그 자손 또는 하위 플렉스 아이템의 Z축 순서를 지정</li>
+                        <li><strong>transition-duration</strong> : </li>
+                        <li><strong>transition-property</strong> : </li>
+                        <li><strong>transition-timing-function</strong> : </li>
+                        <li><strong>translate</strong> : </li>
+                        <li><strong>unicode-bidi</strong> : </li>
+                        <li><strong>user-select</strong> : </li>
+                        <li><strong>vertical-align</strong> : </li>
+                        <li><strong>visibility</strong> : </li>
+                        <li><strong>white-space</strong> : </li>
+                        <li><strong>widows</strong> : </li>
+                        <li><strong></strong> : 요소의 너비를 설정</li>
+                        <li><strong>will-change</strong> : </li>
+                        <li><strong>word-break</strong> : </li>
+                        <li><strong>word-spacing</strong> : </li>
+                        <li><strong>writing-mode</strong> : </li>
+                        <li><strong>z-index</strong> : 위치 지정 요소와, 그 자손 또는 하위 플렉스 아이템의 Z축 순서를 지정</li>
                     </ul>
                 </div>
             </div>
