--- a/javascript/effect/searchEffect01.html
+++ b/javascript/effect/searchEffect01.html
@@ -97,7 +97,7 @@
         // 선택자
         const searchBox = document.querySelector(".search__box input");         // input 박스
         const searchList = document.querySelectorAll(".search__list ul li")     // 목록 리스트
-        const searchInfo = document.querySelector(".search_info .num")       // 전체 갯수 구하기
+        const searchInfo = document.querySelector(".search__info .num")       // 전체 갯수 구하기
 
         // 전체 갯수 구하기
         searchInfo.textContent = searchList.length;
