--- a/javascript/effect/dataEffect01.html
+++ b/javascript/effect/dataEffect01.html
@@ -36,14 +36,18 @@
             <div class="test_box">
                 <h3 class="title">1.1 while문을 이용해 1부터 100까지 출력하기</h3>
                 <div class="code">
-<pre><code class="line-numbers language-js">    
+<pre><code class="line-numbers language-js">    let i = 1;
 
+    while(i &lt;= 100){
+        document.write(i);
+        i++;
+    }
 </code></pre>
                 </div>
                 <div class="result">
                     <details>
                         <summary>코드 보기</summary>
-                        
+                            123456789...100
                     </details>
                 </div>
             </div>
@@ -53,14 +57,14 @@
                 <h3 class="title">1.2 for문을 이용해 1부터 100까지 출력하기</h3>
                 <div class="code">
 <pre><code class="line-numbers language-js">    for( let i=1; i&lt;=100; i++){
-    document.write(i);
-}
+        document.write(i);
+    }
 </code></pre>
                 </div>
                 <div class="result">
                     <details>
                         <summary>코드 보기</summary>
-                        123456789...100
+                            123456789...100
                     </details>
                 </div>
             </div>
@@ -69,13 +73,22 @@
             <div class="test_box">
                 <h3 class="title">1.3 for문을 이용해 1부터 100까지 출력하기(짝수, 홀수)</h3>
                 <div class="code">
-<pre><code class="line-numbers language-js">
+<pre><code class="line-numbers language-js">    // 짝수
+    for( let i=2; i&lt;=100; i+=2){
+        document.write(i);
+    }
 
+    /홀수
+    for( let i=1; i&lt;=100; i+=2){
+        document.write(i);
+    }
 </code></pre>
                 </div>
                 <div class="result">
                     <details>
                         <summary>코드 보기</summary>
+                        짝수 246810...100<br>
+                        홀수 13579...99
                     </details>
                 </div>
             </div>
