--- a/index.html
+++ b/index.html
@@ -97,18 +97,12 @@
           </div>
           <div class="header_icon">
             <ul>
-              <li><a href="https://twitter.com/webstoryboy" target="_blank"><i class="fa fa-twitter"
-                    aria-hidden="true"></i><span>twitter</span></a></li>
               <li><a href="https://codepen.io/webstoryboy/" target="_blank"><i class="fa fa-codepen"
                     aria-hidden="true"></i><span>codepen</span></a></li>
               <li><a href="https://github.com/webstoryboy" target="_blank"><i class="fa fa-github"
                     aria-hidden="true"></i><span>github</span></a></li>
-              <li><a href="https://www.youtube.com/channel/UCsvQSv7EeCMHyYb9ENKAJZw" target="_blank"><i
-                    class="fa fa-youtube-play" aria-hidden="true"></i><span>youtube</span></a></li>
-              <li><a href="https://dribbble.com/webstoryboy" target="_blank"><i class="fa fa-dribbble"
-                    aria-hidden="true"></i><span>dribbble</span></a></li>
               <li><a href="https://www.instagram.com/webstoryboy/" target="_blank"><i class="fa fa-instagram"
-                    aria-hidden="true"></i><span>instagram</span></a></li>
+                    aria-hidden="true"></i><span>tistory</span></a></li>
             </ul>
           </div>
         </div>
@@ -134,6 +128,10 @@
           <ul class="filter option-set" data-filter-group="color">
             <li><a href="#filter-color-any" data-filter-value="" class="selected">ALL</a></li>
             <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".class">CLASS</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">SCRIPT</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">LAYOUT</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">REFERENCE</a></li>
+            <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".script">SITE</a></li>
           </ul>
         </div>
       </div>
@@ -184,7 +182,7 @@
           <!-- //box javascript -->
 
           <!-- box html -->
-          <section class="color-shape script">
+          <section class="color-shape reference">
             <a href="html/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
@@ -205,7 +203,7 @@
           <!-- //box html -->
 
           <!-- box css -->
-          <section class="color-shape script">
+          <section class="color-shape reference">
             <a href="css/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
@@ -226,8 +224,29 @@
           <!-- //box css -->
 
           <!-- box css -->
-          <section class="color-shape script">
-            <a href="site/index.html" target="_blank">
+          <section class="color-shape reference">
+            <a href="css/index.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">LAYOUT</span>
+                  <span class="overlay-text-thumb-donut">LAYOUT</span>
+                  <span class="overlay-text-thumb1-donut">LAYOUT</span>
+                  <span class="overlay-text-thumb2-donut">LAYOUT</span>
+                </div>
+                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>LAYOUT</h5>
+                  <p>LAYOUT</p>
+                  <span>LAYOUT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box css -->
+
+          <!-- box css -->
+          <section class="color-shape reference">
+            <a href="site/site1/index.html" target="_blank">
               <div class="image-wrap">
                 <div class="hover-wrap">
                   <span class="overlay-img-donut">SITE</span>
@@ -235,7 +254,7 @@
                   <span class="overlay-text-thumb1-donut">사이트 제작하기</span>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-carrot.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SITE</h5>
                   <p>사이트 제작하기</p>
@@ -246,6 +265,153 @@
           </section>
           <!-- //box css -->
 
+          <!-- box SEARCH -->
+          <section class="color-shape script">
+            <a href="javascript/effect/searchEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">JAVASCRIPT</span>
+                  <span class="overlay-text-thumb-donut">SEARCH</span>
+                  <span class="overlay-text-thumb1-donut">검색 효과</span>
+                  <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
+                </div>
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>SEARCH</h5>
+                  <p>검색 효과</p>
+                  <span>JAVASCRIPT</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box SEARCH -->
+
+          <!-- box QUIZ -->
+          <section class="color-shape script">
+            <a href="javascript/effect/quizEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-text-thumb-donut">QUIZ</span>
+                  <span class="overlay-text-thumb1-donut">퀴즈 효과</span>
+                  <span class="overlay-text-thumb2-donut">SITE</span>
+                </div>
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>QUIZ</h5>
+                  <p>퀴즈 효과</p>
+                  <span>SITE</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box QUIZ -->
+          
+          <!-- box DATA -->
+          <section class="color-shape script">
+            <a href="javascript/effect/dataEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-text-thumb-donut">DATA</span>
+                  <span class="overlay-text-thumb1-donut">데이터 효과</span>
+                  <span class="overlay-text-thumb2-donut">SITE</span>
+                </div>
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>DATA</h5>
+                  <p>데이터 효과</p>
+                  <span>SITE</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box DATA -->
+
+          <!-- box MOUSE -->
+          <section class="color-shape script">
+            <a href="javascript/effect/mouseEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-text-thumb-donut">MOUSE</span>
+                  <span class="overlay-text-thumb1-donut">마우스 효과</span>
+                  <span class="overlay-text-thumb2-donut">SITE</span>
+                </div>
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>MOUSE</h5>
+                  <p>마우스 효과</p>
+                  <span>SITE</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box MOUSE -->
+
+          <!-- box SLIDER -->
+          <section class="color-shape script">
+            <a href="javascript/effect/sliderEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-text-thumb-donut">SLIDER</span>
+                  <span class="overlay-text-thumb1-donut">슬라이드 효과</span>
+                  <span class="overlay-text-thumb2-donut">SITE</span>
+                </div>
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>SLIDER</h5>
+                  <p>슬라이드 효과</p>
+                  <span>SITE</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box SLIDER-->
+
+          <!-- box PARALLAX -->
+          <section class="color-shape script">
+            <a href="javascript/effect/parallaxEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-text-thumb-donut">PARALLAX</span>
+                  <span class="overlay-text-thumb1-donut">패럴랙스 효과</span>
+                  <span class="overlay-text-thumb2-donut">SITE</span>
+                </div>
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>PARALLAX</h5>
+                  <p>패럴랙스 효과</p>
+                  <span>SITE</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box PARALLAX -->
+
+          <!-- box GAME -->
+          <section class="color-shape script">
+            <a href="javascript/effect/gameEffect.html" target="_blank">
+              <div class="image-wrap">
+                <div class="hover-wrap">
+                  <span class="overlay-img-donut">SITE</span>
+                  <span class="overlay-text-thumb-donut">GAME</span>
+                  <span class="overlay-text-thumb1-donut">게임 효과</span>
+                  <span class="overlay-text-thumb2-donut">SITE</span>
+                </div>
+                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <div class="img-text donutImg">
+                  <h5>GAME</h5>
+                  <p>게임 효과</p>
+                  <span>SITE</span>
+                </div>
+              </div>
+            </a>
+          </section>
+          <!-- //box GAME -->
+          
         </div>
         <!-- //container-->
       </div>
