--- a/javascript/effect/mouseEffect01.html
+++ b/javascript/effect/mouseEffect01.html
@@ -21,6 +21,42 @@
             background-color: rgba(255, 255, 255, 0.1);
             user-select: none;
             pointer-events: none;
+            transition: 
+                background-color 0.25s,
+                border-color 0.25s,
+                transform 0.6s,
+                border-radius 0.6s
+            ;
+        }
+        .mouse__cursor.style1 {
+            background-color: #dddddd30;
+            border-color: #b0aaff;
+        }
+        .mouse__cursor.style2 {
+            background-color: #dddddd30;
+            border-color: #7671c5;
+            transform: scale(1.3) rotateY(720deg);
+        }
+        .mouse__cursor.style3 {
+            background-color: #dddddd30;
+            border-color: #514c91;
+            transform: scale(1.3) rotateX(720deg);
+        }
+        .mouse__cursor.style4 {
+            background-color: #dddddd30;
+            border-color: #5e5b88;
+            transform: scale(5);
+        }
+        .mouse__cursor.style5 {
+            background-color: #dddddd30;
+            border-color: #352f88;
+            transform: scale(0.5);
+        }
+        .mouse__cursor.style6 {
+            background-color: #dddddd30;
+            border-color: #554af0;
+            border-radius: 0;
+            transform: scale(3);
         }
         .mouse__wrap {
             width: 100%;
@@ -94,7 +130,7 @@
             <div class="mouse__cursor"></div>
             <div class="mouse__wrap">
                 <p>There's no <span class="style1">more</span> <span class="style2">excuse</span> than what you <span class="style3">don't do.</span></p>
-                <p>니가 <span class="style4">안하는거 뿐</span> 그 <span class="style5">이상</span>의 <span class="style6">핑계</span>는 없다.</p>
+                <p>니가 <span class="style4">안하는 것 뿐</span> 그 <span class="style5">이상</span>의 <span class="style6">핑계</span>는 없다.</p>
             </div>
         </section>
 
@@ -220,11 +256,85 @@
             document.querySelector(".screenY").innerText = event.screenY;
         });
 
-        window.addEventListener("mousemove", (e) => {
-            const cursor = document.querySelector(".mouse__cursor");
+        const cursor = document.querySelector(".mouse__cursor");
 
+        window.addEventListener("mousemove", (e) => {
             cursor.style.left = e.clientX - 25 + "px";
             cursor.style.top = e.clientY - 25 + "px";
+        });
+
+        // document.querySelector(".style1").addEventListener("mouseover", () => {
+        //     cursor.classList.add("style1");
+        // });
+        // document.querySelector(".style1").addEventListener("mouseout", () => {
+        //     cursor.classList.remove("style1");
+        // });
+
+        // document.querySelector(".style2").addEventListener("mouseover", () => {
+        //     cursor.classList.add("style2");
+        // });
+        // document.querySelector(".style2").addEventListener("mouseout", () => {
+        //     cursor.classList.remove("style2");
+        // });
+
+        // document.querySelector(".style3").addEventListener("mouseover", () => {
+        //     cursor.classList.add("style3");
+        // });
+        // document.querySelector(".style3").addEventListener("mouseout", () => {
+        //     cursor.classList.remove("style3");
+        // });
+
+        // document.querySelector(".style4").addEventListener("mouseover", () => {
+        //     cursor.classList.add("style4");
+        // });
+        // document.querySelector(".style4").addEventListener("mouseout", () => {
+        //     cursor.classList.remove("style4");
+        // });
+
+        // document.querySelector(".style5").addEventListener("mouseover", () => {
+        //     cursor.classList.add("style5");
+        // });mouseouts
+        // document.querySelector(".style5").addEventListener("mouseout", () => {
+        //     cursor.classList.remove("style5");
+        // });
+
+        // document.querySelector(".style6").addEventListener("mouseover", () => {
+        //     cursor.classList.add("style6");
+        // });
+        // document.querySelector(".style6").addEventListener("mouseout", () => {
+        //     cursor.classList.remove("style6");
+        // });
+
+        // // for문
+        // for(let i=1; i<=6; i++) {
+        //     document.querySelector(".style" + i).addEventListener("mouseover", () => {
+        //         cursor.classList.add("style" + i);
+        //     });
+        //     document.querySelector(".style" + i).addEventListener("mouseout", () => {
+        //         cursor.classList.remove("style" + i);
+        //     });
+        // }
+
+        // // forEach문
+        // document.querySelectorAll(".mouse__wrap span").forEach((span, num) => {
+        //     span.addEventListener("mouseover", () => {
+        //         cursor.classList.add("style" + (num + 1));
+        //     });
+        //     span.addEventListener("mouseout", () => {
+        //         cursor.classList.add("style" + (num + 1));
+        //     });
+        // });
+
+        // getAttribute
+        document.querySelectorAll(".mouse__wrap span").forEach(span => {
+            let attr = span.getAttribute("class");
+
+            span.addEventListener("mouseover", () => {
+                cursor.classList.add(attr);
+            });
+            span.addEventListener("mouseout", () => {
+                cursor.classList.add(attr);
+            });
         });
     </script>
 </body>
