--- a/javascript/effect/mouseEffect01.html
+++ b/javascript/effect/mouseEffect01.html
@@ -333,7 +333,7 @@
                 cursor.classList.add(attr);
             });
             span.addEventListener("mouseout", () => {
-                cursor.classList.add(attr);
+                cursor.classList.remove(attr);
             });
         });
     </script>
