--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -211,7 +211,7 @@
                 <h3 class="title">Pottery</h3>
                 <p class="desc">
                     저희는 비즈니스 캐주얼을 지향하고 있으며,<br>
-                    언제 어디서든 <a href="#">편안한 룩</a>이 지향합니다
+                    언제 어디서든 편안한 룩을 지향합니다.
                 </p>
                 <span class="small">배너 유형 01</span>
             </div>
