--- a/javascript/effect/parallaxEffect01.html
+++ b/javascript/effect/parallaxEffect01.html
@@ -520,15 +520,15 @@
             //     document.querySelector("#parallax__nav li(9)").classList.add("active");
             // }
 
-            // for
-            // for(let i=0; i<=9; i++) {
+            // // for
+            // for (let i=0; i<=9; i++) {
             //     if(scrollTop >= document.getElementById("section"+i).offsetTop) {
             //         document.querySelectorAll("#parallax__nav li").forEach(li => {
             //             li.classList.remove("active");
             //         });
-            //         document.querySelector("#parallax__nav li:nth-child("+i+")").classList.add("active");
-            //     }
-            // }
+            //     document.querySelector("#parallax__nav li:nth-child("+i+")").classList.add("active");
+            //     };
+            // };
 
             // document.querySelector(".offset1").innerText = document.getElementById("section1").offsetTop;
             // document.querySelector(".offset2").innerText = document.getElementById("section2").offsetTop;
