--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -39,20 +39,20 @@
         <a href="#">푸터 영역 바로가기</a>
     </div>
     <!-- //skip -->
-    
+
     <main id="mainType">
-        <section id="headerType" class="header__wrap nexon">
+        <section id="headerType" class="header__wrap nexon scroll">
             <div class="header__inner">
                 <div class="header__logo">
                     <a href="#">web<em>site</em></a>
                 </div>
                 <div class="header__menu">
                     <ul>
-                        <li><a href="#">헤더 영역</a></li>
-                        <li><a href="#">슬라이드 영역</a></li>
-                        <li><a href="#">배너 영역</a></li>
-                        <li><a href="#">컨테이너 영역</a></li>
-                        <li><a href="#">푸터 영역</a></li>
+                        <li class="active"><a href="#headerType">헤더 영역</a></li>
+                        <li><a href="#sliderType">슬라이드 영역</a></li>
+                        <li><a href="#bannerType">배너 영역</a></li>
+                        <li><a href="#imgTextType">컨테이너 영역</a></li>
+                        <li><a href="#footerType">푸터 영역</a></li>
                     </ul>
                 </div>
                 <div class="header__member">
@@ -62,7 +62,7 @@
         </section>
         <!-- //header -->
     
-        <section id="sliderType" class="slider__wrap nexon">
+        <section id="sliderType" class="slider__wrap nexon content">
             <h2 class="blind">슬라이드 영역</h2>
             <div class="slider__inner">
                 <div class="slider">
@@ -96,7 +96,7 @@
         </section>
         <!-- //slider -->
 
-        <section id="imageType" class="image__wrap nexon section">
+        <section id="imageType" class="image__wrap nexon section content">
             <h2>POTTERY</h2>
             <p>‘POTTERY’, 포터리라는 이름은 도자기를 의미합니다.</p>
             <div class="image__inner container">
@@ -114,7 +114,7 @@
         </section>
         <!-- //image -->
 
-        <section id="imgTextType" class="imgText__wrap nexon section">
+        <section id="imgTextType" class="imgText__wrap nexon section content">
             <h2 class="blind">유용한 사이트 살펴보기</h2>
             <div class="imgText__inner container">
                 <div class="imgText__txt">
@@ -140,7 +140,7 @@
         </section>
         <!-- //imgText -->
 
-        <section id="cardType" class="card__wrap nexon section">
+        <section id="cardType" class="card__wrap nexon section content">
             <h2>POTTERY</h2>
             <p>‘POTTERY’, 포터리라는 이름은 도자기를 의미합니다.</p>
             <div class="card__inner container">
@@ -205,7 +205,7 @@
         </section>
         <!-- //card -->
 
-        <section id="bannerType" class="banner__wrap nexon">
+        <section id="bannerType" class="banner__wrap nexon content">
             <h2 class="blind">배너 영역</h2>
             <div class="banner__inner">
                 <h3 class="title">Pottery</h3>
@@ -218,7 +218,7 @@
         </section>
         <!-- //banner -->
 
-        <section id="textType" class="text__warp nexon section">
+        <section id="textType" class="text__warp nexon section content">
             <span>텍스트 유형 01</span>
             <h2 class="mb70">POTTERY</h2>
             <div class="text__inner container">
@@ -255,69 +255,95 @@
             </div>
         </section>
         <!-- //text -->
+
+        <section id="footerType" class="footer__wrap nexon section gray content">
+            <h2 class="blind">푸터 영역</h2>
+            <div class="footer__inner container">
+                <div class="footer__menu">
+                    <div>
+                        <h3>사이트</h3>
+                        <ul>
+                            <li><a href="#">웹표준 사이트</a></li>
+                            <li><a href="#">반응형 사이트</a></li>
+                            <li><a href="#">패럴랙스 사이트</a></li>
+                            <li><a href="#">포트폴리오 사이트</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>헤더 영역</h3>
+                        <ul>
+                            <li><a href="#">메뉴 유형01</a></li>
+                            <li><a href="#">메뉴 유형02</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>슬라이드 영역</h3>
+                        <ul>
+                            <li><a href="#">슬라이드 유형01</a></li>
+                            <li><a href="#">슬라이드 유형02</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>이미지 영역</h3>
+                        <ul>
+                            <li><a href="#">이미지 유형01</a></li>
+                            <li><a href="#">이미지 유형02</a></li>
+                            <li><a href="#">이미지/텍스트 유형01</a></li>
+                            <li><a href="#">이미지/텍스트 유형02</a></li>
+                            <li><a href="#">텍스트 유형01</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>컨텐츠 영역</h3>
+                        <ul>
+                            <li><a href="#">카드 유형01</a></li>
+                            <li><a href="#">카드 유형02</a></li>
+                            <li><a href="#">카드 유형03</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>푸터 영역</h3>
+                        <ul>
+                            <li><a href="#">푸터 메뉴 유형01</a></li>
+                            <li><a href="#">푸터 컨택트 유형02</a></li>
+                            <li><a href="#">푸터 이메일 유형03</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__right">
+                    2022 Pottery.<br>
+                    All rights reserved.
+                </div>
+            </div>
+        </section>
+        <!-- //footer -->
+
     </main>
     <!-- //main -->
 
-    <footer id="footerType" class="footer__wrap nexon section gray">
-        <h2 class="blind">푸터 영역</h2>
-        <div class="footer__inner container">
-            <div class="footer__menu">
-                <div>
-                    <h3>사이트</h3>
-                    <ul>
-                        <li><a href="#">웹표준 사이트</a></li>
-                        <li><a href="#">반응형 사이트</a></li>
-                        <li><a href="#">패럴랙스 사이트</a></li>
-                        <li><a href="#">포트폴리오 사이트</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>헤더 영역</h3>
-                    <ul>
-                        <li><a href="#">메뉴 유형01</a></li>
-                        <li><a href="#">메뉴 유형02</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>슬라이드 영역</h3>
-                    <ul>
-                        <li><a href="#">슬라이드 유형01</a></li>
-                        <li><a href="#">슬라이드 유형02</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>이미지 영역</h3>
-                    <ul>
-                        <li><a href="#">이미지 유형01</a></li>
-                        <li><a href="#">이미지 유형02</a></li>
-                        <li><a href="#">이미지/텍스트 유형01</a></li>
-                        <li><a href="#">이미지/텍스트 유형02</a></li>
-                        <li><a href="#">텍스트 유형01</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>컨텐츠 영역</h3>
-                    <ul>
-                        <li><a href="#">카드 유형01</a></li>
-                        <li><a href="#">카드 유형02</a></li>
-                        <li><a href="#">카드 유형03</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>푸터 영역</h3>
-                    <ul>
-                        <li><a href="#">푸터 메뉴 유형01</a></li>
-                        <li><a href="#">푸터 컨택트 유형02</a></li>
-                        <li><a href="#">푸터 이메일 유형03</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer__right">
-                2022 Pottery.<br>
-                All rights reserved.
-            </div>
-        </div>
-    </footer>
-    <!-- //footer -->
+    <script>
+        window.addEventListener("scroll", () => {
+            let scrollTop = window.pageYOffset || indow.scrollY || document.documentElement.scrollTop;
+
+            // forEach
+            document.querySelectorAll("section").forEach((element, index) => {
+                if(scrollTop >= element.offsetTop -2) {
+                    document.querySelectorAll(".header__menu ul li").forEach(li => {
+                        li.classList.remove("active");
+                    });
+                    document.querySelector(".header__menu ul li:nth-child("+(index+1)+")").classList.add("active");
+                }
+            });
+        });
+
+        document.querySelectorAll("#headerType ul li a").forEach(li => {
+            li.addEventListener("click", (e) => {
+                e.preventDefault();
+                document.querySelector(li.getAttribute("href")).scrollIntoView({
+                    behavior: "smooth"
+                });
+            })
+        })
+    </script>
 </body>
 </html>
