--- a/study/t_study/css/study/cssAniMotion.html
+++ b/study/t_study/css/study/cssAniMotion.html
@@ -12,139 +12,19 @@
 <body>
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">CSS Animation</h2>
-            <p class="t_desc2">이번 시간에는 CSS내에 있는 여러 종류에 애니메션에 대해 알아보겠습니다.</p>
+            <h2 class="t_tit">CSS Motion Animation</h2>
+            <p class="t_desc2">이번 시간에는 걸어다니는 모션 CSS 애니메이션을 만들어 봤습니다.</p>
 
-            <hr>
-
-            <h3 class="t_tit2">Animation</h3>
-            <p class="t_desc2" style="margin-top: 45px;">
-                Animation : name | duration | timing-function | delay | iteration | direction | fill-mode | play-state
+            <p class="t_box">
+                여러 이미지가 하나로 연결된 이미지를 사용하며, @keyframes에서 position을 이용하였습니다.
             </p>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>종류</th>
-                        <th>예시</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>animation-name</td>
-                        <td>@keyframe에 지정된 이름을 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>animation-duration</td>
-                        <td>애니메이션이 실행되는 시간을 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>animation-timing-function</td>
-                        <td>애니메이션 키프레임 움직임을 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>animation-delay</td>
-                        <td>애니메이션이 시작되기 전까지 시간을 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>animation-iteration</td>
-                        <td>애니메이션 반복 횟수를 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>animation-derection</td>
-                        <td>애니메이션 방향을 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>animation-fill-mode</td>
-                        <td>애니메이션 끝나고 난 뒤 어떤 값을 적용할지 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>animation-play-state</td>
-                        <td>애니메이션 실행 상태를 설정합니다.</td>
-                    </tr>
-                </tbody>
-            </table>
 
-            <h3 class="t_tit2">Transtion</h3>
-            <p class="t_desc2">
-                Transtion : property | durtion | timing-function | delay
+            <p class="codepen" data-height="800" data-default-tab="css,result" data-slug-hash="rNvOJbY" data-user="kdb6" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+              <span>See the Pen <a href="https://codepen.io/kdb6/pen/rNvOJbY">
+              Untitled</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
+              on <a href="https://codepen.io">CodePen</a>.</span>
             </p>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>종류</th>
-                        <th>예시</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>transition-property</td>
-                        <td>트렌지션을 적용할 CSS 속성 대상을 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>transition-druation</td>
-                        <td>트렌지션 작동시간을 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>transition-timing-function</td>
-                        <td>트렌지션 움직임 효과를 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>transition-delay</td>
-                        <td>트렌지션이 시작되기 전까지 시간을 설정합니다.</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <h3 class="t_tit2">Timing-function</h3>
-            <p class="t_desc2">
-                Timing-function의 종류와 예시를 나타낸 표입니다.
-            </p>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>종류</th>
-                        <th>예시</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>linear</td>
-                        <td>일정한 간격으로 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>ease</td>
-                        <td>처음에는 서서히 가속하고 마지막 부분에서 급격히 감속합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>ease-in</td>
-                        <td>처음에는 천천히 시작하고 마지막에 가속합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>ease-out</td>
-                        <td>처음에는 최대 속도로 시작하고 마지막에 감속합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>ease-in-out</td>
-                        <td>처음에는 제로 속도로 시작하고, 중간 지점에서 최고 속도로 움직이고, 마지막 부분에서 서서히 감속합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>step-start</td>
-                        <td>애니메이션을 시작점에서 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>step-end</td>
-                        <td>애니메이션을 끝점에서 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>steps(int, start/end)</td>
-                        <td>애니메이션을 단계별을 설정합니다.</td>
-                    </tr>
-                    <tr>
-                        <td>cubic-bezier(n,n,n,n)</td>
-                        <td>버지니아 곡선 값을 만들어서 설정합니다.</td>
-                    </tr>
-                </tbody>
-            </table>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
         </div>
     </main>
 
