--- a/sql/index.html
+++ b/sql/index.html
@@ -147,7 +147,7 @@
                     <div class="bs-callout bs-callout-info">
                         create database 데이터베이스 이름;
                     </div>
-<pre><code class="language-js">    mysql> create database sample02;
+<pre><code class="language-js">    mysql> create database sample01;
     Query OK, 1 row affected (0.00 sec)
 </code></pre>
 
@@ -163,7 +163,6 @@
     | mysql              |
     | performance_schema |
     | sample01           |
-    | sample02           |
     | sys                |
     +--------------------+
     6 rows in set (0.00 sec)
@@ -192,7 +191,7 @@
                     <h2 id="intro5" class="page-header">테이블</h2>
                     <h3 id="intro5-1" class="page-header">테이블 만들기</h3>
                     <div class="bs-callout bs-callout-info">
-                        create table 테이블 이름
+                        create table 테이블 이름;
                     </div>
 <pre><code class="language-js">    create table member (
         myMemberID int(10) unsigned auto_increment,
@@ -220,7 +219,7 @@
 
                     <h3 id="intro5-3" class="page-header">테이블 보기</h3>
                     <div class="bs-callout bs-callout-info">
-                        desc 테이블 이름
+                        desc 테이블 이름;
                     </div>
 <pre><code class="language-js">    mysql> desc member;
     +------------+------------------+------+-----+---------+----------------+
