--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -26,6 +26,13 @@
     <link rel="stylesheet" href="assets/css/banner.css">
     <link rel="stylesheet" href="assets/css/text.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/swiper.css">
+
+    <style>
+        #headerType {display: none;}
+    </style>
 </head>
 <body>
     <div id="skip">
@@ -40,32 +47,33 @@
     </div>
     <!-- //skip -->
 
-    <main id="mainType">
-        <section id="headerType" class="header__wrap nexon scroll">
-            <div class="header__inner">
-                <div class="header__logo">
-                    <a href="#">Pottery<em></em></a>
-                </div>
-                <div class="header__menu">
-                    <ul>
-                        <li class="active"><a href="#headerType">Header</a></li>
-                        <li><a href="#sliderType">22AW Lookbook</a></li>
-                        <li><a href="#imgTextType">NEW ARRIVALS</a></li>
-                        <li><a href="#cardType">HQ Service</a></li>
-                        <li><a href="#bannerType">Pottery</a></li>
-                    </ul>
-                </div>
-                <div class="header__member">
-                    <a href="#">Login</a>
-                </div>
+    <section id="headerType" class="header__wrap nexon scroll">
+        <div class="header__inner">
+            <div class="header__logo">
+                <a href="#">Pottery<em></em></a>
             </div>
-        </section>
-        <!-- //header -->
+            <div class="header__menu">
+                <ul>
+                    <li class="active"><a href="#headerType">Header</a></li>
+                    <li><a href="#sliderType">22AW Lookbook</a></li>
+                    <li><a href="#imgTextType">NEW ARRIVALS</a></li>
+                    <li><a href="#cardType">HQ Service</a></li>
+                    <li><a href="#bannerType">Pottery</a></li>
+                </ul>
+            </div>
+            <div class="header__member">
+                <a href="#">Login</a>
+            </div>
+        </div>
+    </section>
+    <!-- //header -->
+
+    <main id="mainType">
     
         <section id="sliderType" class="slider__wrap nexon content">
             <h2 class="blind">슬라이드 영역</h2>
             <div class="slider__inner">
-                <div class="slider">
+                <!-- <div class="slider">
                     <div class="slider__img">
                         <div class="desc">
                             <span>Brand</span>
@@ -90,6 +98,50 @@
                         <a href="#" class="play"><span class="ir">플레이</span></a>
                         <a href="#" class="stop"><span class="ir">정지</span></a>
                     </div>
+                </div> -->
+            
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="desc">
+                                <span>Brand</span>
+                                <h3>22AW Lookbook</h3>
+                                <p>
+                                    포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다.
+                                </p>
+                                <div class="btn">
+                                    <a href="#">Read more</a>
+                                    <a href="#" class="black">Site</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="desc">
+                                <span>Brand</span>
+                                <h3>22AW Lookbook</h3>
+                                <p>
+                                    포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다.
+                                </p>
+                                <div class="btn">
+                                    <a href="#">Read more</a>
+                                    <a href="#" class="black">Site</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide"><div class="desc">
+                            <span>Brand</span>
+                            <h3>22AW Lookbook</h3>
+                            <p>
+                                포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다.
+                            </p>
+                            <div class="btn">
+                                <a href="#">Read more</a>
+                                <a href="#" class="black">Site</a>
+                            </div>
+                        </div></div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
                 </div>
             </div>
         </section>
@@ -132,13 +184,11 @@
                         <li><a href="#">Pants</a></li>
                     </ul>
                 </div>
-                <div class="imgText__all">
-                    <div class="imgText__img img1">
-                        <a href="#">NEW ARRIVALS</a>
-                    </div>
-                    <div class="imgText__img img2">
-                        <a href="#" class="blue">BEST</a>
-                    </div>
+                <div class="imgText__img img1">
+                    <a href="#">NEW ARRIVALS</a>
+                </div>
+                <div class="imgText__img img2">
+                    <a href="#" class="blue">BEST</a>
                 </div>
             </div>
         </section>
@@ -262,70 +312,80 @@
         </section>
         <!-- //text -->
 
-        <section id="footerType" class="footer__wrap nexon section gray content">
-            <h2 class="blind">푸터 영역</h2>
-            <div class="footer__inner container">
-                <div class="footer__menu">
-                    <div>
-                        <h3>POTTERY</h3>
-                        <!-- <ul>
-                            <li><a href="#">웹표준 사이트</a></li>
-                            <li><a href="#">반응형 사이트</a></li>
-                            <li><a href="#">패럴랙스 사이트</a></li>
-                            <li><a href="#">포트폴리오 사이트</a></li>
-                        </ul> -->
-                    </div>
-                    <div>
-                        <h3>Header</h3>
-                        <!-- <ul>
-                            <li><a href="#">메뉴 유형01</a></li>
-                            <li><a href="#">메뉴 유형02</a></li>
-                        </ul> -->
-                    </div>
-                    <div>
-                        <h3>22AW Lookbook</h3>
-                        <!-- <ul>
-                            <li><a href="#">슬라이드 유형01</a></li>
-                            <li><a href="#">슬라이드 유형02</a></li>
-                        </ul> -->
-                    </div>
-                    <div>
-                        <h3>NEW ARRIVALS</h3>
-                        <!-- <ul>
-                            <li><a href="#">이미지 유형01</a></li>
-                            <li><a href="#">이미지 유형02</a></li>
-                            <li><a href="#">이미지/텍스트 유형01</a></li>
-                            <li><a href="#">이미지/텍스트 유형02</a></li>
-                            <li><a href="#">텍스트 유형01</a></li>
-                        </ul> -->
-                    </div>
-                    <div>
-                        <h3>HQ Service</h3>
-                        <!-- <ul>
-                            <li><a href="#">카드 유형01</a></li>
-                            <li><a href="#">카드 유형02</a></li>
-                            <li><a href="#">카드 유형03</a></li>
-                        </ul> -->
-                    </div>
-                    <div>
-                        <h3>Pottery</h3>
-                        <!-- <ul>
-                            <li><a href="#">푸터 메뉴 유형01</a></li>
-                            <li><a href="#">푸터 컨택트 유형02</a></li>
-                            <li><a href="#">푸터 이메일 유형03</a></li>
-                        </ul> -->
-                    </div>
-                </div>
-                <div class="footer__right">
-                    2022 Pottery.<br>
-                    All rights reserved.
-                </div>
-            </div>
-        </section>
-        <!-- //footer -->
-
     </main>
     <!-- //main -->
+
+    <section id="footerType" class="footer__wrap nexon section gray content">
+        <h2 class="blind">푸터 영역</h2>
+        <div class="footer__inner container">
+            <div class="footer__menu">
+                <div>
+                    <h3>POTTERY</h3>
+                    <!-- <ul>
+                        <li><a href="#">웹표준 사이트</a></li>
+                        <li><a href="#">반응형 사이트</a></li>
+                        <li><a href="#">패럴랙스 사이트</a></li>
+                        <li><a href="#">포트폴리오 사이트</a></li>
+                    </ul> -->
+                </div>
+                <div>
+                    <h3>Header</h3>
+                    <!-- <ul>
+                        <li><a href="#">메뉴 유형01</a></li>
+                        <li><a href="#">메뉴 유형02</a></li>
+                    </ul> -->
+                </div>
+                <div>
+                    <h3>22AW Lookbook</h3>
+                    <!-- <ul>
+                        <li><a href="#">슬라이드 유형01</a></li>
+                        <li><a href="#">슬라이드 유형02</a></li>
+                    </ul> -->
+                </div>
+                <div>
+                    <h3>NEW ARRIVALS</h3>
+                    <!-- <ul>
+                        <li><a href="#">이미지 유형01</a></li>
+                        <li><a href="#">이미지 유형02</a></li>
+                        <li><a href="#">이미지/텍스트 유형01</a></li>
+                        <li><a href="#">이미지/텍스트 유형02</a></li>
+                        <li><a href="#">텍스트 유형01</a></li>
+                    </ul> -->
+                </div>
+                <div>
+                    <h3>HQ Service</h3>
+                    <!-- <ul>
+                        <li><a href="#">카드 유형01</a></li>
+                        <li><a href="#">카드 유형02</a></li>
+                        <li><a href="#">카드 유형03</a></li>
+                    </ul> -->
+                </div>
+                <div>
+                    <h3>Pottery</h3>
+                    <!-- <ul>
+                        <li><a href="#">푸터 메뉴 유형01</a></li>
+                        <li><a href="#">푸터 컨택트 유형02</a></li>
+                        <li><a href="#">푸터 이메일 유형03</a></li>
+                    </ul> -->
+                </div>
+            </div>
+            <div class="footer__right">
+                2022 Pottery.<br>
+                All rights reserved.
+            </div>
+        </div>
+    </section>
+    <!-- //footer -->
+
+    <script src="assets/js/swiper.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+          navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+          },
+        });
+    </script>
 
     <script>
         window.addEventListener("scroll", () => {
