--- a/sql/index.html
+++ b/sql/index.html
@@ -319,7 +319,7 @@
     +------------+-------------------+---------+---------+----------+---------+
     1 row in set (0.01 sec)
 </code></pre>
-                    <h4 style="padding-top: 20px;">email중에 naver 텍스르르 포함하고 있는 경우</h4>
+                    <h4 style="padding-top: 20px;">email중에 naver 텍스트를 포함하고 있는 경우</h4>
 <pre><code class="language-js">    mysql> SELECT * FROM member WHERE youEmail LIKE '%naver%';
     +------------+------------------------+---------+---------+----------+---------+
     | myMemberID | youEmail               | youName | youPass | youBirth | regTime |
