--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -30,7 +30,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/swiper.css">
 </head>
-<body class="fixed">
+<body>
     <div id="skip">
         <a href="#">헤더 영역 바로가기</a>
         <a href="#">슬라이드 영역 바로가기</a>
